fixed create account card element being stuck on top of page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,7 +44,3 @@
   --amplify-primary-tint: #E8871E;
   --amplify-primary-shade: #92FF9E;
 }
-
-body {
-  background: white;
-}
